# xii-django-river-admin

./: .codacy.yml  .coveragerc  .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  test_settings.py  test_urls.py  tox.ini
.github/workflows/: ci.yml  docs.yml  pythonpublish.yml
demo/: admin.py  urls.py  view.py
demo/management/commands/: bootstrap_river_admin_demo.py
demo/settings/: base.py  prod.py
docs/: authentication.rst  conf.py  contribute.rst  custom_admin.rst  getting_started.rst  index.rst
docs/_static/css/: custom.css
docs/function/: create_or_update_function.rst  index.rst  list_functions.rst
docs/workflow/: authorizations.rst  create_workflow.rst  hooks.rst  list_workflow.rst
docs/workflow_object/: list_workflow_objects.rst  timeline.rst
examples/issue_tracker_example/: admin.py  models.py
examples/issue_tracker_example/migrations/: 0001_initial.py
examples/shipping_example/: admin.py  models.py
examples/shipping_example/migrations/: 0001_initial.py
pages/: CHANGELOG.md  deploy.sh  index.html  package-lock.json  package.json  vite.config.js
pages/src/: App.vue  links.js
pages/src/assets/: main.css
pages/src/components/: AppFooter.vue  AppHeader.vue  Hero.vue  Screenshots.vue
ui/: eslint.config.js  index.html  package.json  vite.config.js
ui/src/: App.vue  main.js  routers.js  store.js  vuetify.js
ui/src/components/: ApprovalDetail.vue  ApprovalList.vue  CodeEditor.vue  CreateApprovalForm.vue  CreateApprovalHookForm.vue  EmptyState.vue  (+7 more)
xii/django_river_admin/: __init__.py  urls.py
(+62 files in other folders)
