[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xii-django-river-admin"
version = "0.8.0"
description = "Administration UI for xii-django-river (XII Digital fork of river-admin)"
readme = "README.rst"
license = { text = "BSD" }
authors = [{ name = "Ahmet DAL", email = "ceahmetdal@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.0",
    "xii-django-river>=4.0.0",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/xiidigital/xii-django-river-admin"
Upstream = "https://github.com/javrasya/river-admin"

[tool.setuptools.packages.find]
namespaces = true
include = ["xii.django_river_admin*"]
exclude = ["xii.django_river_admin.tests*"]

[tool.setuptools.package-data]
"xii.django_river_admin" = ["static/**/*", "templates/**/*"]
